--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,12 @@
     <title>Full Stack Developer | Troels Gjørup - Java & Javascript</title>
   </head>
   <body>
+    <style>
+      body {
+        background-color: red;
+      }
+    </style>
+
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
